<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="username"
            type="String" />

        <variable
            name="location"
            type="String" />

        <variable
            name="followers"
            type="String" />

        <variable
            name="followings"
            type="String" />

        <variable
            name="htmlUrl"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp16">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp16"
                android:text="@string/user_details"
                android:textColor="#000000"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnBack" />

            <androidx.cardview.widget.CardView
                android:id="@+id/userCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="@dimen/dp60"
                        android:layout_height="@dimen/dp60"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Circle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp16"
                        android:text="@{username}"
                        android:textColor="#000000"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/imgAvatar"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/line"
                        android:layout_marginStart="@dimen/dp16"
                        android:layout_marginTop="@dimen/dp5"
                        android:background="@color/gray"
                        app:layout_constraintTop_toBottomOf="@id/tvUsername"
                        app:layout_constraintStart_toEndOf="@id/imgAvatar"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/locationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp16"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="@dimen/dp4"
                        android:text="@{location}"
                        android:textColor="@color/sub_color"
                        android:textSize="@dimen/sp16"
                        android:layout_marginTop="@dimen/dp5"
                        app:layout_constraintStart_toEndOf="@id/imgAvatar"
                        app:layout_constraintTop_toBottomOf="@id/line" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/followerFollowingLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userCardView">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/follower"
                        android:src="@drawable/ic_followers" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{followers}"
                        android:textColor="#000000"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        android:textColor="#666666"
                        android:textSize="@dimen/sp14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/following"
                        android:src="@drawable/ic_followings" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{followings}"
                        android:textColor="#000000"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/sub_color"
                        android:textSize="@dimen/sp14" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blogTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:text="@string/blog"
                android:textColor="@color/black"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/followerFollowingLayout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blogUrlTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:autoLink="web"
                android:text="@{htmlUrl}"
                android:textColor="@color/blog_color"
                android:textSize="@dimen/sp16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blogTitleTextView"
                tools:text="https://blog.abc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>